--- a/sls-test/serverless.yml
+++ b/sls-test/serverless.yml
@@ -64,6 +64,8 @@ custom:
 functions:
   hello:
     handler: handler.main
+  functionOne:
+    handler: handler.handler
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
