--- a/sls-test/serverless.yml
+++ b/sls-test/serverless.yml
@@ -66,6 +66,8 @@ functions:
     handler: handler.main
   functionOne:
     handler: handler.handler
+  temp:
+    handler: handler.temp
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
