Import dlib, openCV, numpy

--- a/my-service/serverless.yml
+++ b/my-service/serverless.yml
@@ -82,7 +82,9 @@ functions:
       - http:
           path: imagetest
           method: post
-          
+
+  packagetest:
+    handler: handler.packagetest  
 
 
 
