Download Trained Data from s3

--- a/my-service/serverless.yml
+++ b/my-service/serverless.yml
@@ -84,7 +84,10 @@ functions:
           method: post
 
   packagetest:
-    handler: handler.packagetest  
+    handler: handler.packagetest
+    
+  trainedtest:
+    handler: handler.downloadTrainedData
 
 
 
